--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
+          <li><a class="nav-link scrollto" href="#demo-container">Demo</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link scrollto" href="#services">Services</a></li>
-          <li><a class="nav-link scrollto" href="#team">Team</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -91,6 +91,23 @@
             </p>
             <a href="#" class="btn-learn-more">Learn More</a>
           </div>
+        </div>
+        <div class="row content shadow-lg" id="demo-container" style="margin-top: 3em;">
+          <div class="section-title">
+            <h3>Watch our <span>Free Demo</span></h3>
+          </div>
+          <div class="col-lg-6">
+            <h3 id="demo-des">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita perferendis nemo exercitationem animi blanditiis quis atque. Quasi est, hic, saepe similique non temporibus quidem, optio accusantium quia tempore ipsum laudantium.
+            </h3>
+          </div>
+          <div class="col-lg-6 pt-4 pt-lg-0">
+            <video id="video1" class="Demo-video" autoplay controls  poster="assets/img/hero-bg.jpg" preload="metadata">
+              <source src="assets/demo/mov_bbb.mp4" type="video/mp4">
+              Your browser does not support HTML5 video.
+            </video>
+          </div>
+        </div>
         </div>
 
       </div>
@@ -284,7 +301,7 @@
     </section><!-- End F.A.Q Section -->
 
     <!-- ======= Team Section ======= -->
-    <section id="team" class="team">
+    <!-- <section id="team" class="team">
       <div class="container">
 
         <div class="section-title">
@@ -370,7 +387,7 @@
         </div>
 
       </div>
-    </section><!-- End Team Section -->
+    </section>End Team Section -->
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
